removing old okl, adding okl kernel building

--- a/docs/skewform/dg.bib
+++ b/docs/skewform/dg.bib
@@ -1,3 +1,33 @@
+@article{visbal1999high,
+  title={High-order-accurate methods for complex unsteady subsonic flows},
+  author={Visbal, Miguel R and Gaitonde, Datta V},
+  journal={AIAA journal},
+  volume={37},
+  number={10},
+  pages={1231--1239},
+  year={1999}
+}
+
+@article{parsani2015entropy,
+  title={Entropy stable wall boundary conditions for the three-dimensional compressible Navier--Stokes equations},
+  author={Parsani, Matteo and Carpenter, Mark H and Nielsen, Eric J},
+  journal={Journal of Computational Physics},
+  volume={292},
+  pages={88--113},
+  year={2015},
+  publisher={Elsevier}
+}
+@article{svard2018entropy,
+  title={Entropy Stability and the No-Slip Wall Boundary Condition},
+  author={Sv\"{a}rd, Magnus and Carpenter, Mark H and Parsani, Matteo},
+  journal={SIAM Journal on Numerical Analysis},
+  volume={56},
+  number={1},
+  pages={256--273},
+  year={2018},
+  publisher={SIAM}
+}
+
 @article{thomas1979geometric,
   title={Geometric conservation law and its application to flow computations on moving grids},
   author={Thomas, PD and Lombard, CK},
